--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Sistema de Atrasos - UEPDC</title>
   
   <!-- Favicon del colegio -->
-  <link rel="icon" type="image/png" href="https://i.ibb.co/dwm03mTb/image-30.png" />
+  <link rel="icon" type="image/png" href="https://i.ibb.co/wNhQpyX0/image-30.png" />
 
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -196,7 +196,7 @@
     const { useState, useEffect, useRef } = React;
 
     // Logo URL desde internet
-    const LOGO_URL = "https://i.ibb.co/dwm03mTb/image-30.png";
+    const LOGO_URL = "https://i.ibb.co/wNhQpyX0/image-30.png";
 
     // Supabase
     const SUPABASE_URL = 'https://ebfknrtbfszjmnnhoxwe.supabase.co';
@@ -1546,4 +1546,3 @@
   </script>
 </body>
 </html>
-
